tests/semantic/rel_empty/rel_empty.dl
// Negative test case for a relation that is not defined

.type Type

.decl R()

